# codex-config

./: .gitignore  AGENTS.md  README.md  config.toml  config.toml.example  notify.ps1  pyproject.toml  sync_codex.py
agents/: code-reviewer.toml  code-simplifier.toml  security-auditor.toml  test-engineer.toml
commands/: code-simplify.md  ship.md
hooks/: hooks.json  session_start.py
scripts/: __init__.py  sync.py  sync_remote_skills.py  sync_to_codex.py
skills/browser-testing-with-devtools/: SKILL.md
skills/context-engineering/: SKILL.md
skills/exec-plans/: SKILL.md
skills/gemini-cli/: SKILL.md
skills/idea-refine/: SKILL.md
tests/: test_sync.py  test_sync_codex.py  test_sync_remote_skills.py  test_sync_to_codex.py
